# nightingale

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  README.rst  codelists.xlsx  direct.toml  direct_mapping.xlsx  limited.toml  limited_mapping.xlsx  mapping.xlsx  outline.toml  outline_mapping.xlsx  pyproject.toml  requirements.txt  setup.cfg  undefined.toml  undefined_mapping.xlsx
.github/workflows/: ci.yml  docker.yml  docker_build.yml  lint.yml  pypi.yml  pytest.yml
docs/: api.rst  changelog.rst  cli.rst  conf.py  data_flow.rst  examples.rst  index.rst  installation.rst  tutorial.rst
nightingale/: __main__.py  cli.py  codelists.py  config.py  exceptions.py  loader.py  mapper.py  publisher.py  readers.py  transformer.py  unflatten.py  util.py  utils.py  writer.py
nightingale/config/v1/: __init__.py  config.py
nightingale/mapping/v1/: __init__.py  config.py  validator.py
nightingale/mapping_template/: validator.py
nightingale/mapping_template/v09/: __init__.py
nightingale/readers/: __init__.py  csv.py  json.py
tests/: test_cli.py  test_codelists.py  test_loader.py  test_mapping_loader.py  test_packer.py  test_publisher.py  test_unflatten.py  test_validator.py  test_writer.py
