[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nightingale"
version = "0.0.1"
authors = [{name = "Open Contracting Partnership", email = "data@open-contracting.org"}]
description = "An ETL to transform US cities procurement data into OCDS format."
readme = "README.rst"
license = {text = "BSD"}
urls = {Homepage = "https://github.com/open-contracting/nightingale"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "click",
    "click-pathlib",
    "dict-hash",
    "ocdskit",
    "openpyxl",
    "pydantic",
    "simplejson",
]

[project.scripts]
nightingale = "nightingale.cli:run"

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-mock",
]
types = [
    "mypy",
    "types-openpyxl",
    "types-simplejson",
]

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "tests.*",
]

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.mypy]
strict = true
warn_unreachable = true
exclude = "(build|docs|tests)/"
