[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nightingale"
version = "0.0.1"
authors = [{name = "Open Contracting Partnership", email = "data@open-contracting.org"}]
description = "An ETL to transform US cities procurement data into OCDS format."
readme = "README.rst"
license = {text = "BSD"}
urls = {Homepage = "https://github.com/open-contracting/nightingale"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
    "annotated-types==0.7.0",
    "attrs==25.1.0",
    "cattrs==24.1.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "click-pathlib==2020.3.13.0",
    "deepdiff==8.3.0",
    "deflate_dict==1.2.2",
    "et_xmlfile==2.0.0",
    "idna==3.10",
    "ijson==3.3.0",
    "json-merge-patch==0.2",
    "jsonref==1.1.0",
    "ocdsextensionregistry==0.6.9",
    "ocdskit==1.3.2",
    "ocdsmerge==0.7.0",
    "openpyxl==3.1.5",
    "platformdirs==4.3.6",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "pytz==2025.1",
    "requests==2.32.3",
    "requests-cache==1.2.1",
    "simplejson==3.20.1",
    "six==1.17.0",
    "typing_extensions==4.12.2",
    "url-normalize==1.4.3",
    "urllib3==2.3.0",
]

[project.scripts]
nightingale = "nightingale.cli:run"

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-mock",
]
types = [
    "mypy",
    "types-openpyxl",
    "types-simplejson",
]

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "tests.*",
]

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.mypy]
strict = true
warn_unreachable = true
exclude = "(build|docs|tests)/"
